# KalshiBot

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  OPERATOR_RUNBOOK.md  README.md  STATUS.md  STRATEGY_BRIEF.md  pyproject.toml  uv.toml
data/: feds_paper_text.txt  le_crowd_wisdom_text.txt  whelan_betfair_text.txt
data/processed/: kxhigh_dataset.parquet
research/: LIVE_READINESS_DECISION.md  OPERATOR_HANDOFF.md  code-review-phase-2-milestone-1.md  code-review-phase-2-milestone-2.md  critic-favorite-maker.md  critic-live-mode-design.md  critic-methodology-phase-2.md  critic-methodology-sports.md  critic-plan-phase-2.md  critic-report.md  favorite-maker-results.md  key-findings.md  lessons-learned.md  live-mode-design.md  phase-1.5-methodology.md  phase-1.5-results.md  phase-1.6-results.md  phase-2-autonomous-log.md  phase-2-methodology.md  phase-2-proposal.md  phase-2-results.md  phase-3-design.md  phase-3-runbook.md  research-document.md  round-3-methodology-revision.md  sports-longhorizon-methodology.md  sports-longhorizon-proposal.md  sports-results.md  strategy-comparison.md  time-scale-analysis.md  v1-fillrate-and-sizing-2026-05-30.md  v1-settlement-parity-2026-05-30.md  w2-v1-residual-edge.md  why-no-ml.md
research/briefs/: agent-a-api-infra.md  agent-b-edges.md  agent-c-risk.md  agent-d-legal-ca-addendum.md  agent-d-legal.md
research/literature/: INDEX.md  aia-2025-forecaster-and-followups.md  bartlett-ohara-2026-adverse-selection.md  becker-2026-microstructure.md  burgi-deng-whelan-2025.md  diercks-katz-wright-2026-feds.md  halawi-2024-human-level-forecasting.md  karger-2024-forecastbench.md  le-2026-crowd-wisdom.md  lopez-de-prado-2018-cv.md  ng-peng-tao-zhou-2026-price-discovery.md  schoenegger-2024-silicon-crowd.md  sports-prediction-ceiling-2022-2024.md  whelan-2026-betfair.md  zerve-calibshi-2026.md
research/v10/: 01-market-universe.md  02a-data-scout.md  02b-literature-delta.md  03-methodology-meta.md  04-phase0-synthesis.md  05-phase1.5-critic.md  06-v10a-revival-probe.md  07-smoke-test-report.md  08-v10b-partial-results.md  A1-data-probe.md  A2-methodology-lock.md  B1-data-probe.md  B2-methodology-lock.md  B3-methodology-revisions.md
research/v10a/: 01-lit-delta.md  02-becker-inventory-output.txt  03-strategic-synthesis.md  04-mohanty-pivot-feasibility.md  05-becker-edge-discovery.md  05-phase1-category-headline.csv  05-phase2-cells-with-mt.csv  05-phase2-cells.csv  05-phase3-loco.csv  05-phase3-prefix-agg.parquet  05-phase3-summary.json  05-phase4-combined-loco.json  05-phase4-combined-side-loco.csv  05-resolution-balance-by-group.csv  05-side-symmetry-by-band.csv  06-cluster-sweep-results.json  07-train-oos-sweep.json  08-edge-discovery-results.md  09-live-universe-probe.json  10-live-spread-probe.md  FINAL-VERDICT.md  (+23 more)
scripts/: adopt_orphan_orders.py  adopt_v1_orphan.py  backfill_v1_fees.py  cancel_excess_resting.py  cancel_long_horizon.py  dashboard.ps1  dashboard.py  extract_pdf.py  fix_state_from_kalshi.py  install_scheduled_task.ps1  live_review.py  paper_trade.py  paper_trade_favorite.py  probe_order_tif.py  reset_v1_kill.py  reset_v1_tally.py  restart_all_bots.ps1  restart_bot.ps1  run_live_bot.ps1  test_discord.py  wake_up_check.py
tests/: test_adopt_v14_orphans.py  test_adopt_v1_orphan.py  test_adverse_selection_monitor.py  test_adverse_selection_wiring.py  test_auth.py  test_bootstrap.py  test_calibration.py  test_dataset.py  test_drawdown.py  test_dutchbook.py  test_favorite_maker.py  test_gate.py  test_gate_phase2.py  test_gate_sports.py  test_kalshi_client.py  test_kill_triggers.py  test_kxhigh.py  test_lead_lag_gates.py  test_lead_lag_shadow.py  test_live_order_manager.py  test_market_scanner.py  test_metrics.py  test_no_underdog_arm.py  test_order_manager.py  test_paper_trade.py  test_paper_trade_favorite.py  test_politics.py  test_polymarket.py  test_preflight.py  test_pricing.py  test_shadow_filter.py  test_single_instance.py  test_slope.py  test_sports.py  test_train_test_split.py  test_v14_sizing.py
(+580 files in other folders)
