[project]
name = "kalshi-bot"
version = "0.1.0"
description = "Quant trading bot research and implementation for Kalshi prediction markets"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary - private project" }

# Core deps for Phase 1.5 (data fetch + calibration analysis) and Phase 2+
dependencies = [
    "httpx>=0.28.0",
    "sniffio==1.3.1",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "pyarrow>=18.0.0",
    "duckdb>=1.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "cryptography>=44.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "lightgbm>=4.6.0",
    "pybaseball>=2.2.7",
    "streamlit>=1.57.0",
    "psutil>=7.2.2",
    "safetensors>=0.6.2",
    "tabpfn>=2.0.0,<3.0.0",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-psutil==7.2.2.20260518",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]
# scripts/v2/ is research-only scaffolding for the (paused) v2 data-source
# investigation. Not part of the live-trading codepath. Exclude from lint
# until that branch resumes.
exclude = ["scripts/v2/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
